Git: Use sshCommand to be free of ssh shenenigans

--- a/dot_config/git/git-work.conf
+++ b/dot_config/git/git-work.conf
@@ -1,3 +1,7 @@
 [user]
-  name = janpucilowski
+  name = Jan Pucilowski
   email = jan.pucilowski@sofomo.com
+[github]
+  user = "janpucilowski"
+[core]
+  sshCommand = "ssh -i ~/.ssh/git_sofomo"
