--- a/dot_config/git/git-personal.conf
+++ b/dot_config/git/git-personal.conf
@@ -1,3 +1,7 @@
 [user]
-  name = janpuc
+  name = Jan Pucilowski
   email = jan.pucilowski99@gmail.com
+[github]
+  user = "janpuc"
+[core]
+  sshCommand = "ssh -i ~/.ssh/id_rsa"
